--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -29,7 +29,8 @@
     "request-ip": "^2.1.3",
     "swagger-ui-express": "^4.0.1",
     "winston": "^3.1.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "btoa": "1.2.1",
