Added openapi-nodegen-mockers as a devDependency to package.json template.

--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -49,6 +49,7 @@
     "jest": "^24.7.1",
     "uuid": "3.3.2",
     "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "openapi-nodegen-mockers": "^0.0.1"
   }
 }
