Deleted generators folder. And changed import of generators to openapi-nodegen-mockers.

--- a/templates/es6/src/domains/__mocks__/___.js.njk
+++ b/templates/es6/src/domains/__mocks__/___.js.njk
@@ -1,4 +1,4 @@
-import { mockItGenerator } from '../../generators'
+import { mockItGenerator } from 'openapi-nodegen-mockers'
 
 class {{ capitaLetter(operation_name)}}DomainMock {
   {% for op in operations -%}
