--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -10,46 +10,46 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.3",
-    "command-line-args": "^5.0.2",
-    "cors": "^2.8.4",
+    "body-parser": "^1.19.0",
+    "command-line-args": "^5.1.1",
+    "cors": "^2.8.5",
     "custom-error": "^0.2.1",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.2",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "express-validation": "^1.0.2",
-    "express-form-data": "^2.0.1",
+    "express-form-data": "^2.0.8",
     "express-auth-middle": "^1.0.4",
     "express-promise-router": "^3.0.3",
-    "celebrate": "^10.0.0",
-    "jsonwebtoken": "^8.4.0",
+    "celebrate": "^10.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "object-reduce-by-map": "^1.3.2",
     "recursive-readdir-sync": "^1.0.6",
     "request-ip": "^2.1.3",
-    "swagger-ui-express": "^4.0.1",
-    "winston": "^3.1.0",
-    "yamljs": "^0.3.0",
-    "faker": "^4.1.0"
+    "swagger-ui-express": "^4.0.7",
+    "winston": "^3.2.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "btoa": "1.2.1",
-    "eslint": "^5.8.0",
+    "btoa": "^1.2.1",
+    "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
-    "babel-eslint": "^10.0.1",
+    "faker": "^4.1.0",
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "babel-loader": "^8.0.6",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "uuid": "3.3.2",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
     "openapi-nodegen-mockers": "^0.0.2"
   }
 }
