--- a/templates/typescript/src/http/nodegen/routesImporter.ts.njk
+++ b/templates/typescript/src/http/nodegen/routesImporter.ts.njk
@@ -1,3 +1,4 @@
+import express = require('express')
 {% for endpoint in swagger.endpoints -%}
 {% if(endsWith(swagger.basePath, '/')) -%}
 
@@ -9,7 +10,7 @@ import {{prettifyRouteName(endpoint)}}Routes from './routes/{{prettifyRouteName(
 {% endfor -%}
 import swaggerRoutes from './routes/swaggerRoutes'
 
-export default function (app) {
+export default function (app: express.Application) {
   {% for endpoint in swagger.endpoints -%}
     {% if(endsWith(swagger.basePath, '/')) %}
   app.use('{{swagger.basePath}}{{endpoint}}', {{prettifyRouteName(endpoint)}}Routes())
