--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -23,7 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
-    "object-reduce-by-map": "^1.3.6",
+    "object-reduce-by-map": "^1.3.7",
     "recursive-readdir-sync": "^1.0.6",
     "request-ip": "^2.1.3",
     "swagger-ui-express": "^4.0.7",
@@ -43,6 +43,7 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/dotenv": "^6.1.0",
     "@types/lodash": "^4.14.119",
-    "@types/fs-extra": "^5.0.4"
+    "@types/fs-extra": "^5.0.4",
+    "openapi-nodegen-mockers": "^0.0.2"
   }
 }
