fix: config missing from routes importer

--- a/templates/typescript/src/http/nodegen/routesImporter.ts.njk
+++ b/templates/typescript/src/http/nodegen/routesImporter.ts.njk
@@ -1,4 +1,5 @@
 import express = require('express')
+import config from '@/config'
 {% for endpoint in swagger.endpoints -%}
 {% if(endsWith(swagger.basePath, '/')) -%}
 
