--- a/templates/typescript/src/http/nodegen/routesImporter.ts.njk
+++ b/templates/typescript/src/http/nodegen/routesImporter.ts.njk
@@ -1,6 +1,6 @@
 import express = require('express')
-import config from '../../../config'
-{% for endpoint in swagger.endpoints -%}
+import config from '../../config'
+{% for endpoint in endpoints -%}
 {% if(endsWith(swagger.basePath, '/')) -%}
 
 import {{prettifyRouteName(endpoint)}}Routes from './routes/{{prettifyRouteName(endpoint)}}Routes'
@@ -12,7 +12,7 @@ import {{prettifyRouteName(endpoint)}}Routes from './routes/{{prettifyRouteName(
 import swaggerRoutes from './routes/swaggerRoutes'
 
 export default function (app: express.Application) {
-  {% for endpoint in swagger.endpoints -%}
+  {% for endpoint in endpoints -%}
     {% if(endsWith(swagger.basePath, '/')) %}
   app.use('{{swagger.basePath}}{{endpoint}}', {{prettifyRouteName(endpoint)}}Routes())
     {% else %}
