--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -44,6 +44,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/lodash": "^4.14.119",
     "@types/fs-extra": "^5.0.4",
-    "openapi-nodegen-mockers": "^0.0.5"
+    "openapi-nodegen-mockers": "^0.0.5",
+    "typescript": "^3.5.3"
   }
 }
