--- a/templates/es6/src/http/nodegen/routes/___.js.njk
+++ b/templates/es6/src/http/nodegen/routes/___.js.njk
@@ -4,7 +4,7 @@ import objectReduceByMap from 'object-reduce-by-map'
 import jwtMiddleware from '../middleware/jwtMiddleware'
 import apiKeyMiddleware from '../middleware/apiKeyMiddleware'
 import {{ camelCase(operation_name) }}Validators from'../validators/{{ prettifyRouteName(operation_name) }}Validators'
-import {{camelCase(operation_name)}}Domain from '../../../domains/{{capitaLetter(operation_name)}}Domain'
+import {{camelCase(operation_name)}}Domain from '../../../domains/{{operation_name | capitalize}}Domain'
 import {{camelCase(operation_name)}}TransformOutputs from '../transformOutputs/{{operation_name}}TransformOutput'
 
 export default function() {
