--- a/templates/typescript/src/domains/__mocks__/___.ts.njk
+++ b/templates/typescript/src/domains/__mocks__/___.ts.njk
@@ -2,7 +2,7 @@ import { mockItGenerator } from 'openapi-nodegen-mockers'
 
 {% set interfaces = importInterfaces(operations) %}
 {% for interface in interfaces -%}
-import {{ interface }} from '@/http/nodegen/interfaces/{{ interface }}';
+import {{ interface }} from '../../http/nodegen/interfaces/{{ interface }}';
 {%- endfor %}
 
 class {{ operation_name | capitalize}}DomainMock {
