--- a/templates/typescript/src/http/nodegen/routes/___.ts.njk
+++ b/templates/typescript/src/http/nodegen/routes/___.ts.njk
@@ -2,7 +2,7 @@ import express from 'express'
 import Router from 'express-promise-router'
 import objectReduceByMap from 'object-reduce-by-map'
 
-import NodegenRequest from '../interfaces/NodegenRequest.model'
+import NodegenRequest from '../interfaces/NodegenRequest'
 
 {{ celebrateImport(operations) }}
 import jwtMiddleware from '../middleware/jwtMiddleware'
