--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -6,7 +6,10 @@
     "build:prod": "node node_modules/webpack/bin/webpack.js --progress --colors",
     "build:dev": "node node_modules/webpack/bin/webpack.js -d --progress --colors",
     "build:dev-watch": "node node_modules/webpack/bin/webpack.js -wd --progress --colors",
-    "start:dev": "pm2 start pm2.dev.config.js && pm2 logs {{package.name}}"
+    "start:dev": "pm2 start pm2.dev.config.js && pm2 logs {{package.name}}",
+    "lint": "eslint ./",
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "jest"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
