--- a/templates/typescript/src/domains/___.ts.njk
+++ b/templates/typescript/src/domains/___.ts.njk
@@ -11,7 +11,7 @@ class {{ operation_name | capitalize }}Domain {
     {% for key, path in op.path -%}
       {% if validMethod(key) %}
   // Operation ID: {{ path.operationId }}
-  async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
+  public async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
     {% if mockServer %}
     return {{ operation_name | capitalize }}DomainMock.{{ path.operationId }}(
       {% for requestType, value in path['x-request-definitions'] -%}
