--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -6,7 +6,7 @@
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "start:dev": "pm2 start pm2.dev.config.js && pm2 logs {{package.name}}",
-    "lint": "tslint ./",
+    "lint": "tslint --project tsconfig.json",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "jest"
   },
