--- a/templates/typescript/src/http/nodegen/routes/___.ts.njk
+++ b/templates/typescript/src/http/nodegen/routes/___.ts.njk
@@ -20,7 +20,7 @@ export default function() {
   router.{{key}}(
     '{{op.subresource}}',
     {{getSecDefMiddleware(path, swagger)}} {{celebrateRoute(operation_name, path.parameters, path.operationId)}}
-    async (req: NodegenRequest, res: express.Response) => {
+    async (req: any, res: express.Response) => {
       return res.json(
         objectReduceByMap(
           await {{camelCase(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}}),
