--- a/templates/typescript/src/http/nodegen/interfaces/index.ts.njk
+++ b/templates/typescript/src/http/nodegen/interfaces/index.ts.njk
@@ -1,4 +1,3 @@
-
-export default interface {{definitionName}} {
-  {{definitionInterfaceText}}
-}
+{% for interface in swagger.interfaces -%}
+export {default as {{ interface.name}}} from './{{ interface.name }}';
+{% endfor %}
