--- a/templates/es6/src/domains/__mocks__/___mock.js.njk
+++ b/templates/es6/src/domains/__mocks__/___mock.js.njk
@@ -3,7 +3,7 @@ import { mockItGenerator } from 'openapi-nodegen-mockers'
 class {{ operation_name | capitalize}}DomainMock {
   {% for op in operations -%}
     {% for key, path in op.path -%}
-      {% if isisValidMethod(key) %}
+      {% if isValidMethod(key) %}
   // Operation ID: {{ path.operationId }}
   async {{ path.operationId }} ({{ pathParamsToDomainParams(path) }}) {
     {{mockOutput( path, mockServer )}}
