--- a/templates/typescript/src/domains/___stub.ts.njk
+++ b/templates/typescript/src/domains/___stub.ts.njk
@@ -9,7 +9,7 @@ import {{ operation_name | capitalize }}DomainMock from './__mocks__/{{ operatio
 class {{ operation_name | capitalize }}Domain {
   {% for op in operations -%}
     {% for key, path in op.path -%}
-      {% if isisValidMethod(key) %}
+      {% if isValidMethod(key) %}
   // Operation ID: {{ path.operationId }}
   public async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
     {% if mockServer %}
