--- a/templates/typescript/src/http/nodegen/validators/___op.ts.njk
+++ b/templates/typescript/src/http/nodegen/validators/___op.ts.njk
@@ -3,7 +3,7 @@ import {Joi} from 'celebrate'
 export default {
   {% for operation in operations -%}
     {% for method, path in operation.path -%}
-      {% if isisValidMethod(method) %}
+      {% if isValidMethod(method) %}
   {{ path.operationId }}: {
     {{paramsValidation(path.parameters)}}
   },
