--- a/templates/es6/src/domains/__mocks__/___mock.js.njk
+++ b/templates/es6/src/domains/__mocks__/___mock.js.njk
@@ -1,6 +1,6 @@
 import { mockItGenerator } from 'openapi-nodegen-mockers'
 
-class {{ operation_name | capitalize}}DomainMock {
+class {{ ucFirst(operation_name)}}DomainMock {
   {% for op in operations -%}
     {% for key, path in op.path -%}
       {% if isValidMethod(key) %}
@@ -12,4 +12,4 @@ class {{ operation_name | capitalize}}DomainMock {
     {%- endfor %}
   {%- endfor %}
 }
-export default new {{operation_name | capitalize}}DomainMock()
+export default new {{ucFirst(operation_name)}}DomainMock()
