--- a/templates/es6/src/http/nodegen/routes/___op.js.njk
+++ b/templates/es6/src/http/nodegen/routes/___op.js.njk
@@ -4,7 +4,7 @@ import objectReduceByMap from 'object-reduce-by-map'
 import jwtMiddleware from '../middleware/jwtMiddleware'
 import apiKeyMiddleware from '../middleware/apiKeyMiddleware'
 import {{ camelCase(operation_name) }}Validators from'../validators/{{ prettifyRouteName(operation_name) }}Validators'
-import {{camelCase(operation_name)}}Domain from '../../../domains/{{operation_name | capitalize}}Domain'
+import {{ucFirst(operation_name)}}Domain from '../../../domains/{{ucFirst(operation_name)}}Domain'
 import {{camelCase(operation_name)}}TransformOutputs from '../transformOutputs/{{operation_name}}TransformOutput'
 
 export default function() {
@@ -17,12 +17,18 @@ export default function() {
     '{{op.subresource}}',
     {{getSecDefMiddleware(path, swagger)}} {{celebrateRoute(operation_name, path.parameters, path.operationId)}}
     async (req, res) => {
+      {% if not path.produces or path.produces and arrayContains('application/json', path.produces) %}
       return res.json(
         objectReduceByMap(
-          await {{camelCase(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true)}}),
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true)}}),
           {{camelCase(operation_name)}}TransformOutputs.{{path.operationId}}
         )
-      )
+      );
+      {% else %}
+        return res.download(
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true)}})
+        );
+      {% endif %}
     }
   )
       {% endif %}
