--- a/templates/typescript/src/http/nodegen/routes/___op.ts.njk
+++ b/templates/typescript/src/http/nodegen/routes/___op.ts.njk
@@ -8,11 +8,11 @@ import NodegenRequest from '../interfaces/NodegenRequest'
 import jwtMiddleware from '../middleware/jwtMiddleware'
 import apiKeyMiddleware from '../middleware/apiKeyMiddleware'
 import {{ camelCase(operation_name) }}Validators from'../validators/{{ prettifyRouteName(operation_name) }}Validators'
-import {{camelCase(operation_name)}}Domain from '../../../domains/{{operation_name | capitalize}}Domain'
+import {{ucFirst(operation_name)}}Domain from '../../../domains/{{ucFirst(operation_name)}}Domain'
 import {{camelCase(operation_name)}}TransformOutputs from '../transformOutputs/{{operation_name}}TransformOutput'
 
 export default function() {
-  const router = Router()
+  const router = Router();
   {% for op in operations -%}
     {% for key, path in op.path -%}
       {% if isValidMethod(key)%}
@@ -21,14 +21,20 @@ export default function() {
     '{{op.subresource}}',
     {{getSecDefMiddleware(path, swagger)}} {{celebrateRoute(operation_name, path.parameters, path.operationId)}}
     async (req: any, res: express.Response) => {
+      {% if not path.produces or path.produces and arrayContains('application/json', path.produces) %}
       return res.json(
         objectReduceByMap(
-          await {{camelCase(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}}),
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}}),
           {{camelCase(operation_name)}}TransformOutputs.{{path.operationId}}
         )
-      )
+      );
+      {% else %}
+        return res.download(
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}})
+        );
+      {% endif %}
     }
-  )
+  );
       {% endif %}
     {%- endfor %}
   {%- endfor %}
