--- a/templates/typescript/src/domains/___stub.ts.njk
+++ b/templates/typescript/src/domains/___stub.ts.njk
@@ -3,10 +3,10 @@
   import {{ interface }} from '../http/nodegen/interfaces/{{ interface }}';
 {%- endfor %}
 {% if mockServer %}
-import {{ operation_name | capitalize }}DomainMock from './__mocks__/{{ operation_name | capitalize }}DomainMock'
+import {{ ucFirst(operation_name) }}DomainMock from './__mocks__/{{ ucFirst(operation_name) }}DomainMock'
 {% endif %}
 
-class {{ operation_name | capitalize }}Domain {
+class {{ ucFirst(operation_name) }}Domain {
   {% for op in operations -%}
     {% for key, path in op.path -%}
       {% if isValidMethod(key) %}
@@ -27,4 +27,4 @@ class {{ operation_name | capitalize }}Domain {
   {%- endfor %}
 }
 
-export default new {{ operation_name | capitalize }}Domain();
+export default new {{ ucFirst(operation_name) }}Domain();
