--- a/templates/typescript/src/domains/___stub.ts.njk
+++ b/templates/typescript/src/domains/___stub.ts.njk
@@ -13,7 +13,7 @@ class {{ ucFirst(operation_name) }}Domain {
   // Operation ID: {{ path.operationId }}
   public async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
     {% if mockServer %}
-    return {{ operation_name | capitalize }}DomainMock.{{ path.operationId }}(
+    return {{ ucFirst(operation_name) }}DomainMock.{{ path.operationId }}(
       {% for requestType, value in path['x-request-definitions'] -%}
       {{ requestType }},
       {%- endfor %}
