feat: ts-jest types and githooks added, bump version number

--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -3,6 +3,7 @@
   "description": "{{ inline( swagger.info.description) }}",
   "version": "{{ swagger.info.version }}",
   "scripts": {
+    "install:githooks": "cp ./githooks/* ./.git/hooks",
     "build:prod": "node node_modules/webpack/bin/webpack.js --progress --colors",
     "build:dev": "node node_modules/webpack/bin/webpack.js -d --progress --colors",
     "build:dev-watch": "node node_modules/webpack/bin/webpack.js -wd --progress --colors",
