--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -49,6 +49,7 @@
     "@types/lodash": "^4.14.119",
     "@types/fs-extra": "^5.0.4",
     "@types/hapi__joi": "^15.0.3",
+    "jest": "^24.9.0",
     "openapi-nodegen-mockers": "^0.0.6",
     "ts-jest": "^24.0.2",
     "tslint": "^5.19.0",
