--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -3,12 +3,12 @@
   "description": "{{ inline( swagger.info.description) }}",
   "version": "{{ swagger.info.version }}",
   "scripts": {
-    "install:githooks": "cp ./githooks/* ./.git/hooks",
-    "npm-update-git-deps": "npm-update-git-deps",
     "build": "npm run build:clean && ttsc -p .",
     "build:clean": "rm -rf build/*",
-    "watch:ts": "ttsc --watch -p .",
-    "start:dev": "pm2 start pm2.dev.config.js && pm2 logs {{package.name}}",
+    "dev:build-watch": "ttsc --watch -p .",
+    "dev:start": "pm2 start pm2.dev.config.js && pm2 logs {{package.name}}",
+    "dev:setup": "npm i && cp ./githooks/* .git/hooks && echo 'Ensure you have a .env file, copy the .env.example'",
+    "npm-update-git-deps": "npm-update-git-deps",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
     "test": "npm run lint && npm run test:unit",
