fix: passing the swagger doc in the req object and using the swagger express ui fork

--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -33,7 +33,6 @@
     "object-reduce-by-map": "^1.3.7",
     "recursive-readdir-sync": "^1.0.6",
     "request-ip": "^2.1.3",
-    "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1",
     "yamljs": "^0.3.0"
   },
@@ -56,6 +55,7 @@
     "jest": "^24.9.0",
     "npm-update-git-deps": "^1.2.5",
     "openapi-nodegen-mockers": "^0.0.6",
+    "swagger-ui-express": "johndcarmichael/swagger-ui-express",
     "ts-jest": "^24.0.2",
     "tslint": "^5.19.0",
     "ttypescript": "^1.5.7",
