--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -32,11 +32,12 @@
     "object-reduce-by-map": "^1.3.6",
     "recursive-readdir-sync": "^1.0.6",
     "request-ip": "^2.1.3",
-    "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
     "btoa": "^1.2.1",
     "eslint": "^6.0.1",
     "eslint-config-standard": "^12.0.0",
@@ -46,15 +47,14 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "faker": "^4.1.0",
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
     "babel-loader": "^8.0.6",
     "babel-eslint": "^10.0.2",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "jest": "^24.8.0",
+    "openapi-nodegen-mockers": "^0.0.6",
+    "swagger-ui-express": "johndcarmichael/swagger-ui-express",
     "uuid": "3.3.2",
     "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "openapi-nodegen-mockers": "^0.0.6"
+    "webpack-cli": "^3.3.5"
   }
 }
