feat: package json diff printer, version bump and using the swagger-ui dep as pr accepted
# 1. First part is one of: chore, docs, feat, fix, refactor, style, or test
# 2. Epic|Module you are working on: (e.g. AuditLog, REACH, ...)
# 3. Ticket number followed by a colon: (e.g. BMWCDC-1234)
# 4. A short (max 50 characters) descriptive message (current time/presence: log known issue, NOT: logged known issue)

--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -52,7 +52,7 @@
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "jest": "^24.8.0",
     "openapi-nodegen-mockers": "^0.0.6",
-    "swagger-ui-express": "johndcarmichael/swagger-ui-express",
+    "swagger-ui-express": "4.1.0",
     "uuid": "3.3.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
