--- a/templates/es6/package.json.njk
+++ b/templates/es6/package.json.njk
@@ -30,6 +30,8 @@
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "object-reduce-by-map": "^1.3.6",
+    "openapi-nodegen-config-helper": "1.0.4",
+    "openapi-nodegen-logger": "1.0.0",
     "recursive-readdir-sync": "^1.0.6",
     "request-ip": "^2.1.3",
     "winston": "^3.2.1",
