--- a/templates/typescript/package.json.njk
+++ b/templates/typescript/package.json.njk
@@ -57,7 +57,7 @@
     "jest": "^24.9.0",
     "npm-update-git-deps": "^1.2.5",
     "openapi-nodegen-mockers": "^0.0.6",
-    "swagger-ui-express": "johndcarmichael/swagger-ui-express",
+    "swagger-ui-express": "^4.1.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.19.0",
     "ttypescript": "^1.5.7",
