feat: x-passThruWithoutJWT allows tpls to allow request to hit domain with(out) a jwt, domain jwt can be defined or undefined for visibility

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routes/___op.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routes/___op.ts.njk
@@ -24,7 +24,7 @@ export default function() {
   {% set securityNames = getSecurityNames(path, swagger) %}
   router.{{key}}(
     '{{op.subresource}}',
-    {% if securityNames %}accessTokenMiddleware({{ securityNames }}), /* Validate request security tokens */{% endif %}
+    {% if securityNames %}accessTokenMiddleware({{ securityNames }} {% if path['x-passThruWithoutJWT'] %}, {passThruWithoutJWT: true}{% endif %}), /* Validate request security tokens */{% endif %}
     {% if path['x-permission'] %}permissionMiddleware('{{ path['x-permission'] }}'), /* Check permission of the incoming user */ {% endif %}
     {% if pathsHasParamsToValidate(path) %}celebrate({{ _.camelCase(operation_name) }}Validators.{{path.operationId}}), /* Finally, validate the request data and return validation errors */ {% endif %}
     async (req: any, res: express.Response) => {
