feat: oa3 round 1 done, just need to write some tests now

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routes/___op.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routes/___op.ts.njk
@@ -14,15 +14,15 @@ import {{_.camelCase(operation_name)}}TransformOutputs from '../transformOutputs
 export default function() {
   const router = Router();
   {% for op in operations -%}
-    {% for key, path in op.path -%}
-      {% if isValidMethod(key)%}
+    {% for method, path in op.path -%}
+      {% if isValidMethod(method)%}
   /**
    * Operation ID: {{ path.operationId }}
    * {% if path.summary %}Summary: {{ path.summary }}{% endif %}
    * {% if path.description %}Description: {{ path.description }}{% endif %}
    */
   {% set securityNames = getSecurityNames(path, swagger) %}
-  router.{{key}}(
+  router.{{method}}(
     '{{op.subresource}}',
     {% if securityNames %}accessTokenMiddleware({{ securityNames }} {% if path['x-passThruWithoutJWT'] %}, {passThruWithoutJWT: true}{% endif %}), /* Validate request security tokens */{% endif %}
     {% if path['x-permission'] %}permissionMiddleware('{{ path['x-permission'] }}'), /* Check permission of the incoming user */ {% endif %}
@@ -31,13 +31,13 @@ export default function() {
       {% if not path.produces or path.produces and arrayContains('application/json', path.produces) %}
       return res.json(
         objectReduceByMap(
-          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}}),
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(method, path, false, true, 'params')}}),
           {{_.camelCase(operation_name)}}TransformOutputs.{{path.operationId}}
         )
       );
       {% else %}
         return res.download(
-          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(path, false, true, 'params')}})
+          await {{ucFirst(operation_name)}}Domain.{{path.operationId}}({{pathParamsToDomainParams(method, path, false, true, 'params')}})
         );
       {% endif %}
     }
