--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/___stub.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/___stub.ts.njk
@@ -8,16 +8,16 @@ import {{ ucFirst(operation_name) }}DomainMock from './__mocks__/{{ ucFirst(oper
 
 class {{ ucFirst(operation_name) }}Domain {
   {% for op in operations -%}
-    {% for key, path in op.path -%}
-      {% if isValidMethod(key) %}
+    {% for method, path in op.path -%}
+      {% if isValidMethod(method) %}
   /**
    * Operation ID: {{ path.operationId }}
    * {% if path.summary %}Summary: {{ path.summary }}{% endif %}
    * {% if path.description %}Description: {{ path.description }}{% endif %}
    */
-  public async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
+  public async {{ path.operationId }} ({{ pathParamsToDomainParams(method, path, true) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
     {% if mockServer %}
-    return {{ ucFirst(operation_name) }}DomainMock.{{ path.operationId }}({{ pathParamsToDomainParams(path) }});
+    return {{ ucFirst(operation_name) }}DomainMock.{{ path.operationId }}({{ pathParamsToDomainParams(method, path) }});
     {% else %}
     return {};
     {% endif %}
