--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/__mocks__/___mock.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/__mocks__/___mock.ts.njk
@@ -6,11 +6,11 @@ import { {{ interface }} } from '@/http/nodegen/interfaces/{{ interface }}';
 
 class {{ ucFirst(operation_name) }}DomainMock {
   {% for op in operations -%}
-    {% for key, path in op.path -%}
-      {% if isValidMethod(key) %}
+    {% for method, path in op.path -%}
+      {% if isValidMethod(method) %}
   // Operation ID: {{ path.operationId }}
-  async {{ path.operationId }} ({{ pathParamsToDomainParams(path, true, false) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
-    {{mockOutput( path, mockServer )}}
+  async {{ path.operationId }} ({{ pathParamsToDomainParams(method, path, true, false) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
+    {{mockOutput(path, mockServer )}}
   }
       {% endif %}
     {%- endfor %}
