--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/security/definitions.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/security/definitions.ts.njk
@@ -1,9 +1,10 @@
 export default {
-    {% for name, value in swagger.securityDefinitions %}
+  {% set secDef = swagger.securityDefinitions if swagger.securityDefinitions else swagger.components.securitySchemes -%}
+  {% for name, value in secDef -%}
   '{{ name }}': {
-      {% for subName, subValue in value -%}
+    {% for subName, subValue in value -%}
     '{{ subName }}': {{ subValue | dump }},
-      {% endfor %}
+    {% endfor -%}
   },
-    {%- endfor %}
-}
+  {% endfor -%}
+};
