--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/__mocks__/___mock.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/domains/__mocks__/___mock.ts.njk
@@ -10,7 +10,7 @@ class {{ ucFirst(operation_name) }}DomainMock {
     {% for method, path in op.path -%}
       {% if isValidMethod(method) %}
   // Operation ID: {{ path.operationId }}
-  async {{ path.operationId }} ({{ pathParamsToDomainParams(method, path, true, false) }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
+  async {{ path.operationId }} ({{ pathParamsToDomainParams(method, path, true, false, 'params') }}): Promise<{{ path['x-response-definitions']['200'] if path['x-response-definitions']['200'] else 'any' }}> {
     {{mockOutput( path, mockServer )}}
   }
       {% endif %}
