fix: grouping with endpoints for the routes importer

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routesImporter.ts.njk
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/src/http/nodegen/routesImporter.ts.njk
@@ -1,22 +1,16 @@
 import express = require('express')
 import config from '../../config'
-{% for endpoint in endpoints -%}
-{% if(endsWith(swagger.basePath, '/')) -%}
-
-import {{prettifyRouteName(endpoint)}}Routes from './routes/{{prettifyRouteName(endpoint)}}Routes'
-{% else -%}
-
-import {{prettifyRouteName(endpoint)}}Routes from './routes/{{prettifyRouteName(endpoint)}}Routes'
-{% endif -%}
+{% for groupName, firstUrlSegment in groupNamesWithFirstUrlSegment -%}
+import {{prettifyRouteName(groupName)}}Routes from './routes/{{prettifyRouteName(groupName)}}Routes'
 {% endfor -%}
 import swaggerRoutes from './routes/swaggerRoutes'
 
 export default function (app: express.Application) {
-  {% for endpoint in endpoints -%}
+  {% for groupName, firstUrlSegment in groupNamesWithFirstUrlSegment -%}
     {% if(endsWith(swagger.basePath, '/')) %}
-  app.use('{{swagger.basePath}}{{endpoint}}', {{prettifyRouteName(endpoint)}}Routes())
+  app.use('{{swagger.basePath}}{{firstUrlSegment}}', {{prettifyRouteName(groupName)}}Routes())
     {% else %}
-  app.use('{{swagger.basePath}}/{{endpoint}}', {{prettifyRouteName(endpoint)}}Routes())
+  app.use('{{swagger.basePath}}/{{firstUrlSegment}}', {{prettifyRouteName(groupName)}}Routes())
     {% endif %}
   {%- endfor %}
 
